test_regress/t/t_assert_ctl_unsup.out
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:26:5: Unsupported: non-constant assert assertion-type expression
                                               : ... note: In instance 't.unsupported_ctl_type'
   26 |     $assertcontrol(Lock, a);
      |     ^~~~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:28:5: Unsupported: $assertcontrol control_type '2'
   28 |     $assertcontrol(Unlock);
      |     ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:30:5: Unsupported: $assertcontrol control_type '6'
   30 |     $assertcontrol(PassOn);
      |     ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:31:5: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   31 |     $assertpasson;
      |     ^~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:32:5: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   32 |     $assertpasson(a);
      |     ^~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:33:5: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   33 |     $assertpasson(a, t);
      |     ^~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:35:5: Unsupported: $assertcontrol control_type '7'
   35 |     $assertcontrol(PassOff);
      |     ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:36:5: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   36 |     $assertpassoff;
      |     ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:37:5: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   37 |     $assertpassoff(a);
      |     ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:38:5: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   38 |     $assertpassoff(a, t);
      |     ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:40:5: Unsupported: $assertcontrol control_type '8'
   40 |     $assertcontrol(FailOn);
      |     ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:41:5: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   41 |     $assertfailon;
      |     ^~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:42:5: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   42 |     $assertfailon(a);
      |     ^~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:43:5: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   43 |     $assertfailon(a, t);
      |     ^~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:45:5: Unsupported: $assertcontrol control_type '9'
   45 |     $assertcontrol(FailOff);
      |     ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:46:5: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   46 |     $assertfailoff;
      |     ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:47:5: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   47 |     $assertfailoff(a);
      |     ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:48:5: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   48 |     $assertfailoff(a, t);
      |     ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:50:5: Unsupported: $assertcontrol control_type '10'
   50 |     $assertcontrol(NonvacuousOn);
      |     ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:51:5: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   51 |     $assertnonvacuouson;
      |     ^~~~~~~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:52:5: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   52 |     $assertnonvacuouson(a);
      |     ^~~~~~~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:53:5: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   53 |     $assertnonvacuouson(a, t);
      |     ^~~~~~~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:55:5: Unsupported: $assertcontrol control_type '11'
   55 |     $assertcontrol(VacuousOff);
      |     ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:56:5: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   56 |     $assertvacuousoff;
      |     ^~~~~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:57:5: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   57 |     $assertvacuousoff(a);
      |     ^~~~~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:58:5: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   58 |     $assertvacuousoff(a, t);
      |     ^~~~~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:65:5: Unsupported: non-const assert control type expression
                                               : ... note: In instance 't.unsupported_ctl_type_expr'
   65 |     $assertcontrol(ctl_type);
      |     ^~~~~~~~~~~~~~
%Error: Exiting due to
